--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "Risvi's Portfolio",
+  "homepage": "https://ivsir.github.io/React-Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,13 +11,15 @@
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
+    "gh-pages": "^5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "pre-deploy": "npm run build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
