--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.7.2",
     "react-dom": "17.0.2",
+    "react-pdf": "^6.2.2",
     "react-scripts": "5.0.1",
     "react-youtube": "^7.14.0",
     "web-vitals": "^2.1.4"
