--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
-    "gh-pages": "^5.0.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.7.2",
     "react-dom": "17.0.2",
@@ -45,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
