--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "https://ivsir.github.io/React-Portfolio/",
   "name": "React-Portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ivsir.github.io/React-Portfolio/",
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -24,9 +24,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
