--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-pdf": "^6.2.2",
     "react-scripts": "5.0.1",
     "react-youtube": "^7.14.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-tsparticles": "^2.9.3",
+    "tsparticles": "^2.9.3"
   },
   "scripts": {
     "predeploy": "npm run build",
